refactor(vector): refactor VectorClient configuration loading method